--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>um.tesoreria.rest</name>
 	<description>Spring Boot Tesoreria</description>
-
 	<properties>
 		<java.version>17</java.version>
 	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -95,8 +93,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>1.6.4</version>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.librepdf</groupId>
@@ -104,7 +102,6 @@
 			<version>1.3.29</version>
 		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -127,5 +124,4 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
 </project>
