--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,35 @@ version: "3.9"
 
 services:
 
+    mysql:
+        image: dqmdz/mysql:5.7
+#        ports:
+#            - "3306:3306"
+        volumes:
+            - ./data:/var/lib/mysql
+            - /etc/localtime:/etc/localtime:ro
+            - /etc/timezone:/etc/timezone:ro
+        restart: always
+        environment:
+            - MYSQL_ROOT_PASSWORD=root
+            - TZ=America/Argentina/Mendoza
+
+    phpmyadmin:
+        image: phpmyadmin
+        restart: always
+        ports:
+            - 8292:80
+        environment:
+            - PMA_HOST=mysql
+
     tesoreria:
         build: .
         ports:
-            - 8092:8092
+            - "8092:8092"
+        depends_on:
+            - mysql
         environment:
-            APP_SERVER: 10.147.20.25:3306
+            APP_SERVER: mysql:3306
             APP_DATABASE: tesium
             APP_USER: root
             APP_PASSWORD: root
