Planilla de Recibos Emitidos

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,7 +53,7 @@ spring:
 
 logging:
   level:
-    ar.edu.um.tesoreria.rest: debug
+    um.tesoreria.rest: debug
     web: ${app.logging}
     org:
       hibernate:
