--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,31 +17,35 @@ services:
         networks:
             - tesoreria
 
-#    tesoreria:
-#        build: .
-#        ports:
-#            - "8092:8092"
-#        depends_on:
-#            - mysql
-#        environment:
-#            APP_SERVER: mysql:3306
-#            APP_DATABASE: tesium
-#            APP_USER: root
-#            APP_PASSWORD: root
-#            APP_PORT: 8092
-#            APP_ADD-PROPERTIES: "false"
-#            APP_LOGGING: "debug"
-#            APP_LIVERELOAD_ENABLED: "true"
-#            APP_LIVERELOAD_PORT: 35792
-#            APP_OPEN-IN-VIEW: "false"
-#            APP_MAIL_USERNAME: envios@um.edu.ar
-#            APP_MAIL_PASSWORD: 4Siby2KPwWIStCyX9gLB
-#        networks:
-#            - tesoreria
+    tesoreria:
+        build:
+            context: .
+        ports:
+            - "8092:8092"
+        depends_on:
+            - mysql
+        restart: always
+        environment:
+            APP_SERVER: mysql:3306
+            APP_DATABASE: tesium
+            APP_USER: root
+            APP_PASSWORD: root
+            APP_PORT: 8092
+            APP_ADD-PROPERTIES: "false"
+            APP_LOGGING: "debug"
+            APP_LIVERELOAD_ENABLED: "true"
+            APP_LIVERELOAD_PORT: 35792
+            APP_OPEN-IN-VIEW: "false"
+            APP_MAIL_USERNAME: envios@um.edu.ar
+            APP_MAIL_PASSWORD: 4Siby2KPwWIStCyX9gLB
+        networks:
+            - tesoreria
 
     cloudbeaver:
         image: dbeaver/cloudbeaver:latest
         restart: always
+        depends_on:
+            - mysql
         ports:
             - '8978:8978'
         volumes:
