--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -3,7 +3,7 @@ ENV HOME=/usr/app
 RUN mkdir -p $HOME
 WORKDIR $HOME
 ADD . $HOME
-RUN --mount=type=cache,target=/root/.m2 mvn -f $HOME/pom.xml package
+RUN --mount=type=cache,target=/root/.m2 mvn -f $HOME/pom.xml package -Dmaven.test.skip=true
 
 FROM eclipse-temurin:17-jdk
 COPY --from=build /usr/app/target/*.jar app.jar
