--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -5,9 +5,9 @@ WORKDIR $HOME
 ADD . $HOME
 RUN --mount=type=cache,target=/root/.m2 mvn -f $HOME/pom.xml package -Dmaven.test.skip=true
 
-FROM eclipse-temurin:17-jdk
+FROM eclipse-temurin:17-jdk-alpine
 COPY --from=build /usr/app/target/*.jar app.jar
 COPY marca_etec.png marca_etec.png
 COPY marca_um.png marca_um.png
-COPY medios.png medios.png
+COPY medios.pdf medios.pdf
 ENTRYPOINT ["java","-jar","/app.jar"]
