Upgrade Spring Boot version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,36 +17,36 @@ services:
         networks:
             - tesoreria
 
-    tesoreria.app:
-        build:
-            context: .
-            dockerfile: Dockerfile.local
-        develop:
-            watch:
-                - action: rebuild
-                  path: ./src
-        ports:
-            - "8092:8092"
-        depends_on:
-            - tesoreria.mysql
-        restart: always
-#        volumes:
-#            - .:/app
-        environment:
-            APP_SERVER: "tesoreria.mysql:3306"
-            APP_DATABASE: tesium
-            APP_USER: root
-            APP_PASSWORD: root
-            APP_PORT: 8092
-            APP_ADD-PROPERTIES: "false"
-            APP_LOGGING: "debug"
-            APP_LIVERELOAD_ENABLED: "true"
-            APP_LIVERELOAD_PORT: 35791
-            APP_OPEN-IN-VIEW: "false"
-            APP_MAIL_USERNAME: envios@um.edu.ar
-            APP_MAIL_PASSWORD: 4Siby2KPwWIStCyX9gLB
-        networks:
-            - tesoreria
+#    tesoreria.app:
+#        build:
+#            context: .
+#            dockerfile: Dockerfile.local
+#        develop:
+#            watch:
+#                - action: rebuild
+#                  path: ./src
+#        ports:
+#            - "8092:8092"
+#        depends_on:
+#            - tesoreria.mysql
+#        restart: always
+##        volumes:
+##            - .:/app
+#        environment:
+#            APP_SERVER: "tesoreria.mysql:3306"
+#            APP_DATABASE: tesium
+#            APP_USER: root
+#            APP_PASSWORD: root
+#            APP_PORT: 8092
+#            APP_ADD-PROPERTIES: "false"
+#            APP_LOGGING: "debug"
+#            APP_LIVERELOAD_ENABLED: "true"
+#            APP_LIVERELOAD_PORT: 35791
+#            APP_OPEN-IN-VIEW: "false"
+#            APP_MAIL_USERNAME: envios@um.edu.ar
+#            APP_MAIL_PASSWORD: 4Siby2KPwWIStCyX9gLB
+#        networks:
+#            - tesoreria
 
     tesoreria.cloudbeaver:
         image: dbeaver/cloudbeaver:latest
