--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 app:
   database: tesium
-  server: 192.168.1.3:3306
-  user: dquinteros
-  password: aeqq2004
-#  server: 127.0.0.1:3306
-#  user: root
-#  password: root
+#  server: 192.168.1.3:3306
+#  user: dquinteros
+#  password: aeqq2004
+  server: 127.0.0.1:3306
+  user: root
+  password: root
   add-properties: true
   logging: debug
   livereload:
