--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,12 +29,12 @@ jobs:
     - name: Build with Maven
       run: mvn clean install -Dmaven.test.skip=true
       
-    - uses: mr-smithers-excellent/docker-build-push@v5
+    - uses: mr-smithers-excellent/docker-build-push@v6
       name: Build & push Docker image
       env:
-        VERSION: 11.36.80
+        VERSION: 11.36.81
       with:
-        image: dqmdz/um.tesoreria
+        image: dqmdz/um.tesoreria.core-service
         tags: ${VERSION}, latest, "${GITHUB_REF#refs/heads/}.$(git rev-parse --short ${GITHUB_SHA})"
         registry: docker.io
         dockerfile: Dockerfile
