--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -4,11 +4,6 @@ app:
   server: 10.147.20.20:3306
   user: root
   password: root
-  add-properties: true
-  livereload:
-    enabled: true
-    port: 35792
-  open-in-view: true
   logging: debug
   mail:
     username: uid
@@ -28,7 +23,7 @@ eureka:
 
 spring:
   application:
-    name: core-service
+    name: tesoreria-core-service
   datasource:
     url: jdbc:mysql://${app.server}/${app.database}?useSSL=false&serverTimezone=UTC
     username: ${app.user}
@@ -39,11 +34,6 @@ spring:
     open-in-view: ${app.open-in-view}
     hibernate:
       ddl-auto: none
-  devtools:
-    livereload:
-      enabled: ${app.livereload.enabled}
-      port: ${app.livereload.port}
-    add-properties: ${app.add-properties}
   mail:
     host: smtp.gmail.com
     port: 587
