--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -1,13 +1,31 @@
-FROM maven:3.9.8-eclipse-temurin-21-alpine AS build
+# Etapa de compilación
+FROM maven:3-eclipse-temurin-21-alpine AS build
 ENV HOME=/usr/app
-RUN mkdir -p $HOME
 WORKDIR $HOME
-ADD . $HOME
-RUN --mount=type=cache,target=/root/.m2 mvn -f $HOME/pom.xml package -Dmaven.test.skip=true
 
-FROM eclipse-temurin:21-jdk-alpine
-COPY --from=build /usr/app/target/*.jar app.jar
-COPY marca_etec.png marca_etec.png
-COPY marca_um.png marca_um.png
-COPY medios.pdf medios.pdf
-ENTRYPOINT ["java","-jar","/app.jar"]
+# Copiar los archivos de configuración y código fuente
+COPY pom.xml .
+COPY src ./src
+
+# Cachear dependencias de Maven y compilar el proyecto
+RUN --mount=type=cache,target=/root/.m2 mvn dependency:go-offline \
+    && mvn clean package -DskipTests
+
+# Etapa de ejecución
+# Usar una imagen más pequeña de JRE para la ejecución
+FROM eclipse-temurin:21-jre-alpine
+
+# Definir el directorio de trabajo
+WORKDIR /app
+
+# Copiar el JAR generado desde la etapa de compilación
+COPY --from=build /usr/app/target/*.jar /app/app.jar
+
+# Copiar los recursos necesarios (imágenes, PDFs)
+COPY marca_etec.png marca_um.png medios.pdf ./
+
+# Establecer las opciones de Java
+ENV JAVA_OPTS="-XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0"
+
+# Ejecutar la aplicación
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
