--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -1,15 +1,9 @@
-# Etapa de compilación
 FROM maven:3-eclipse-temurin-21-alpine AS build
 ENV HOME=/usr/app
+RUN mkdir -p $HOME
 WORKDIR $HOME
-
-# Copiar los archivos de configuración y código fuente
-COPY pom.xml .
-COPY src ./src
-
-# Cachear dependencias de Maven y compilar el proyecto
-RUN --mount=type=cache,target=/root/.m2 mvn dependency:go-offline \
-    && mvn clean package -DskipTests
+ADD . $HOME
+RUN --mount=type=cache,target=/root/.m2 mvn -f $HOME/pom.xml package -Dmaven.test.skip=true
 
 # Etapa de ejecución
 # Usar una imagen más pequeña de JRE para la ejecución
@@ -24,11 +18,8 @@ WORKDIR /app
 # Copiar el JAR generado desde la etapa de compilación
 COPY --from=build /usr/app/target/*.jar /app/app.jar
 
-# Copiar los recursos necesarios (imágenes, PDFs)
-COPY marca_etec.png marca_um.png medios.pdf ./
-
-# Establecer las opciones de Java
-ENV JAVA_OPTS="-XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0"
-
-# Ejecutar la aplicación
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
+COPY marca_etec.png marca_etec.png
+COPY marca_um.png marca_um.png
+COPY medio_pago_1.png medio_pago_1.png
+COPY medio_pago_2.png medio_pago_2.png
+ENTRYPOINT ["java","-jar","/app.jar"]
