docs(project): enhance documentation and update project configuration
This comprehensive update improves project documentation and configuration:

- docs(readme): enhance project documentation
  * Add detailed service description
  * Update technology stack list
  * Improve installation instructions
  * Add contribution guidelines
  * Update monitoring section
  * Add links to external documentation

- chore(config): update project configuration
  * Configure GitHub Pages with _config.yml
  * Update banner.txt with new ASCII design
  * Add pages workflow for automated documentation
  * Configure Jekyll theme and settings

- chore(deps): update core dependencies
  * Spring Boot to 3.4.2
  * Kotlin to 2.1.10
  * Add Caffeine cache support
  * Add Spring Boot Cache Starter

- ci(workflow): implement documentation automation
  * Add pages.yml workflow
  * Configure issue and milestone integration
  * Set up documentation generation scripts
  * Add templates for documentation

BREAKING CHANGES:
- Documentation structure has been reorganized
- New GitHub Pages configuration required
- Updated dependency versions may require adjustments

Closes #77

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -33,6 +33,7 @@ spring:
     database-platform: org.hibernate.dialect.MySQLDialect
     hibernate:
       ddl-auto: none
+    open-in-view: false
   mail:
     host: smtp.gmail.com
     port: 587
