feat(messaging): implement RabbitMQ message system for chequera processing
This comprehensive update adds asynchronous messaging capabilities:

- feat(config): add RabbitMQ configuration
  * Create RabbitMQConfig class with queue definitions
  * Configure transaction management
  * Set up JSON message converter
  * Enable persistent queues
  * Add connection factory configuration

- feat(dto): add message data transfer objects
  * Create ChequeraMessageDto in Kotlin
  * Add serialization support
  * Implement message structure for chequera processing

- chore(deps): add messaging dependencies
  * Add spring-boot-starter-amqp
  * Add spring-tx for transaction support
  * Configure AMQP connection properties

- docs(config): update configuration documentation
  * Add RabbitMQ configuration to bootstrap.yml
  * Document queue configuration
  * Add messaging system documentation

BREAKING CHANGES:
- New RabbitMQ dependency required
- Message processing now uses async queue system
- Transaction management has been updated
- Configuration requires RabbitMQ connection details

Closes #79

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -24,6 +24,11 @@ eureka:
 spring:
   application:
     name: tesoreria-core-service
+  rabbitmq:
+    host: rabbitmq
+    port: 5672
+    username: admin
+    password: admin
   datasource:
     url: jdbc:mysql://${app.server}/${app.database}?useSSL=false&serverTimezone=UTC
     username: ${app.user}
