--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,45 +1,24 @@
-app:
-  server: 127.0.0.1:3306
-  database: tesium_test
-  user: root
-  password: root
-  add-properties: true
-  logging: debug
-  livereload:
-    enabled: true
-    port: 35792
-  open-in-view: true
-  port: 8092
-  mail:
-    username: chequeras@um.edu.ar
-    password: 8VlfKS44o8YbOutcm2VT
-  
 server:
-  port: ${app.port}
-  
+  port: 8092
+
 spring:
   main:
     allow-circular-references: true
   datasource:
-    url: jdbc:mysql://${app.server}/${app.database}?useSSL=false&serverTimezone=UTC
-    username: ${app.user}
-    password: ${app.password}
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:h2:mem:tesium_test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    username: sa
+    password: sa
+    driver-class-name: org.h2.Driver
   jpa:
-    database-platform: org.hibernate.dialect.MySQLDialect
-    open-in-view: ${app.open-in-view}
+    database-platform: org.hibernate.dialect.H2Dialect
+    open-in-view: true
     hibernate:
-      ddl-auto: none
-  devtools:
-    livereload:
-      enabled: ${app.livereload.enabled}
-      port: ${app.livereload.port}
-    add-properties: ${app.add-properties}
+      ddl-auto: create-drop
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ${app.mail.username}
-    password: ${app.mail.password}
+    username: chequeras@um.edu.ar
+    password: 8VlfKS44o8YbOutcm2VT
     properties:
       mail:
         smtp:
@@ -54,7 +33,7 @@ spring:
 logging:
   level:
     um.tesoreria.core: debug
-    web: ${app.logging}
+    web: debug
     org:
       hibernate:
-        SQL: ${app.logging}
+        SQL: debug
