chore(release): prepara versión 0.1.0 con actualización de dependencias y configuración
- Actualiza dependencias principales en pom.xml: Spring Boot 3.5.4, Log4j2 3.5.4, MySQL Connector 9.4.0.
- Cambia la versión del proyecto a 0.1.0.
- Otorga permisos explícitos al usuario de la aplicación en Dockerfile.
- Agrega health check de mail y ajustes de métricas en bootstrap.yml.
- Amplía el array de facultades soportadas en FacultadService.
- Añade diagrama Mermaid de dependencias principales en docs/dependencies.mmd.
- Actualiza CHANGELOG.md con los cambios del release.

Closes: #145

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -83,11 +83,12 @@ management:
   health:
     db:
       enabled: true  # Habilita la comprobación de salud de la base de datos
+    mail:
+      enabled: false
   metrics:
-    enabled: true
     enable:
       jdbc: true
-  httpexchanges:
+  http exchanges:
     recording:
       enabled: true
   prometheus:
