--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -36,6 +36,16 @@ spring:
     hibernate:
       ddl-auto: none
     open-in-view: false
+  kafka:
+    bootstrap-servers: kafka:9092
+    consumer:
+      group-id: tesoreria-core-group
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: "*"
+        spring.json.type.mapping: "um.tesoreria.mercadopago.service.domain.event.PaymentProcessedEvent:um.tesoreria.core.event.PaymentProcessedEvent"
   mail:
     host: smtp.gmail.com
     port: 587
