--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -14,6 +14,10 @@ spring:
     open-in-view: true
     hibernate:
       ddl-auto: create-drop
+  kafka:
+    bootstrap-servers: localhost:9092
+    listener:
+      auto-startup: false
   mail:
     host: smtp.gmail.com
     port: 587
