refactor: Migrar módulo Persona a arquitectura hexagonal
- Renombramiento de Persona.kt a PersonaEntity.java

- Reubicación de servicios y repositorios a paquete um.tesoreria.core.hexagonal.persona

- Actualización de dependencias en todos los servicios que usan Persona

- Implementación de Kafka Consumer Config para manejo de eventos de pago

- Mejoras en KafkaProducerConfig usando string serializer class name

- Actualización de PaymentEventListener con containerFactory específico

- Modificación de PreferenceClient para usar MercadoPagoContextDto importado

- Actualización de logging en bootstrap.yml para incluir debug de Kafka

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -84,6 +84,7 @@ logging:
           interceptor: ${app.logging}
         orm:
           jpa: ${app.logging}
+        kafka: DEBUG
 
 management:
   endpoints:
